# robotframework-gemini

./: .gitignore  LICENSE  README.md  README.pt-BR.md  SECURITY.md  pyproject.toml  robot.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml
docs/: KEYWORDS.en.md  KEYWORDS.pt-BR.md
examples/: demo_template.robot
src/: BrowserGeminiLibrary.py  GeminiLibrary.py
src/robotframework_gemini/: __init__.py  browser_helpers.py  client.py  legacy_env.py  library.py  prompt_build.py  response_parse.py
tests/: test_client_mocked.py  test_import_shim.py  test_prompt_build.py  test_rating.py  test_verdict.py
