[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotframework-gemini"
version = "0.3.4"
description = "Google Gemini oracles for Robot Framework: text-only and multimodal (image) assertions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Carlos Nizolli" }]
keywords = ["Robot Framework", "Gemini", "LLM", "multimodal", "QA", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Framework :: Robot Framework",
]
dependencies = [
    "google-genai>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/carlosnizolli/robotframework-gemini"
Documentation = "https://github.com/carlosnizolli/robotframework-gemini/blob/main/README.md"
Repository = "https://github.com/carlosnizolli/robotframework-gemini"
Issues = "https://github.com/carlosnizolli/robotframework-gemini/issues"
Changelog = "https://github.com/carlosnizolli/robotframework-gemini/releases"

[project.optional-dependencies]
browser = [
    "robotframework-browser>=18.0.0",
]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.entry-points."robotframework.libraries"]
GeminiLibrary = "GeminiLibrary:GeminiLibrary"
BrowserGeminiLibrary = "BrowserGeminiLibrary:BrowserGeminiLibrary"

[tool.hatch.build.targets.wheel]
packages = ["src/robotframework_gemini"]

[tool.hatch.build.targets.wheel.force-include]
"src/GeminiLibrary.py" = "GeminiLibrary.py"
"src/BrowserGeminiLibrary.py" = "BrowserGeminiLibrary.py"

[tool.hatch.build.targets.editable]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/robotframework_gemini",
    "src/GeminiLibrary.py",
    "src/BrowserGeminiLibrary.py",
    "LICENSE",
    "README.md",
    "README.pt-BR.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
